# jptranstokenizer

./: .readthedocs.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: doc.yml  juman.patch  release.yml  test.yml  version.yml
docs/: available_models.py  conf.py  install.rst  quickstart.rst  requirements.txt
docs/source/: available_models.rst  conf.py  index.rst  quickstart.rst
docs/template/: package.rst_t
src/jptranstokenizer/: __init__.py  _version.py  model_list.py  tokenization_utils.py
src/jptranstokenizer/mainword/: __init__.py  base.py  juman.py  spacy_luw.py  sudachi.py
src/jptranstokenizer/subword/: __init__.py  sentencepiece.py
tests/: test_load_public_tokenizer.py  test_mainword.py  test_tokenization_utils.py
tests/data/bert-small-japanese/: config.json  tokenizer_config.json  vocab.txt
tests/data/sentencepiece/: spiece.model
tests/data/wordpiece/: vocab.txt
tests/mainword/: test_base.py  test_juman.py  test_spacy_luw.py  test_sudachi.py
